src/app/components/navbar/navbar.component.css
button {
    padding: 10px;
    margin-left: 5px;
}

.offcanvas {
    background-color: var(--white);
}

.sticky-top {
    position: sticky;
    top: 0;
    z-index: 100;
}

.offcanvas div {
    padding: var(--s-medium);
}

.nav {
    padding: 10px 30px;

    flex-direction: row;
    align-items: flex-start;
}

.navbar {
    background-color: var(--dark);
}

.navbar-brand span,
.logo {
    font-family: var(--heading-font);
    font-weight: var(--bold);
    font-size: var(--xx-large);
}

.nav-item {
    font-family: var(--body-font);
    font-weight: var(--regular);
    font-size: var(--medium);
    padding: var(--s-small);
}


.nav-item a {
    color: var(--white);
    
}

.vertical-line{
    background-color: var(--light-grey);
    width: 1px;
    height: var(--x-large);
    /* border-right: 1px solid var(--light-grey); */
}

.navbar-toggler,
.navbar-collapse {
    background-color: var(--dark);
    color: var(--white);

    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.colour {
    color: var(--primary-color)
}

.white {
    color: var(--white);
}

#mobile-left-sidebar {
    background-color: var(--dark);
    color: var(--white);
    /* width: 100%; */
}

#cart-sidebar fa-icon {
    background-color: var(--white);
    color: var(--dark);
}

#cart-sidebar p {
    font-family: var(--heading-font);
    font-size: var(--x-large);
    font-weight: var(--bold);
    font-style: normal;

    display: flex;
    align-items: center;
    color: var(--dark);
}
    
p,
ng-template {
    margin: 0px !important;
    color: var(--white);
    font-size: var(--large);
    text-align: center;
    width: fit-content;
}

ul{
    padding: 0px var(--s-small) !important;
}

a{
    padding: 0px !important;
}

fa-icon,
div .cart-item-counter {
    margin-right: var(--s-small);
    display: flex;
    justify-content: center;
    align-self: center;
}

.offcanvas-footer {
    height: fit-content;
    width: 100%;

    padding: var(--s-medium);

    position: absolute;
    bottom: 0;

    z-index: 10;

    background-color: var(--white);
}

.cart-sb-btn,
.cart-sb-btn:focus,
.cart-sb-btn:active,
.cart-sb-btn {
    padding: var(--s-medium);
}

.checkout-btn,
.checkout-btn:focus,
.checkout-btn:active {
    border-color: var(--primary-color);
    color: var(--white);
    background-color: var(--primary-color);
}

.cart-btn,
.cart-sb-btn:focus,
.cart-btn:active {
    border-color: var(--primary-color);
    color: var(--primary-color);
    background-color: var(--white);
}


@media only screen and (max-width: 768px) {

    .navbar-brand span,
    .logo {
        font-size: var(--x-large);
    }

    .navbar-toggler,
    fa-icon {
        /*make nav items smaller when on mobile devices*/
        font-weight: var(--light);
        font-size: var(--regular);
        padding: 3px;
    }

    button {
        margin-left: 0px;
    }

    body {
        margin-top: 60px;
    }

    nav {
        position: fixed;
        right: 0;
        left: 0;
        top: 0;
        z-index: 50;
    }

    .offcanvas {
        width: 100%;
    }

}

